[tool.poetry]
name = "pyelexon"
version = "0.2.1"
description = ""
authors = ["atsangarides <andreas_tsangarides@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/atsangarides/pyelexon"
repository = "https://github.com/atsangarides/pyelexon"
keywords = ["api", "energy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
pre-commit = "^2.15.0"
python-dotenv = "^0.19.1"
pytest-recording = "^0.12.0"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 89
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.python-version
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
